--- a/woof-distro/x86_64/debian/bookworm64/_00build.conf
+++ b/woof-distro/x86_64/debian/bookworm64/_00build.conf
@@ -107,7 +107,7 @@ THEME_MOUSE="DMZ-Black"
 XSPOT_FLG=yes
 
 ## include Pkg in build (y/n). If commented then asked in 3builddistro
-INCLUDE_PKG=n
+INCLUDE_PKG=y
 
 ## choice to build 64 bit support only for UEFI booting
 ## or 64 bit and 32 bit UEFI support
