--- a/woof-distro/x86_64/ubuntu/jammy64/_00build.conf
+++ b/woof-distro/x86_64/ubuntu/jammy64/_00build.conf
@@ -26,13 +26,13 @@ FDRV_INC="linux-firmware firmware-sof-signed intel-microcode amd64-microcode"
 
 ## Include kernel-kit generated FDRIVE
 ## set to yes or no or leave commented to be asked the question at build time
-#KFDRIVE=no
+KFDRIVE=yes
 
 ## build devx? yes/no - any other value = ask
 BUILD_DEVX=yes
 
 ## include devx SFS in ISO?
-DEVX_IN_ISO=no
+DEVX_IN_ISO=yes
 
 ## symlink /bin, /sbin and /lib to their /usr counterparts, like Debian?
 USR_SYMLINKS=yes
@@ -47,7 +47,7 @@ PETBUILDS="busybox aaa_pup_c disktype dmz-cursor-theme firewallstatus freememapp
 PETBUILD_GTK=3
 
 ## Include the windows puppy installer LICK by Luke Lorimer aka <noryb009>
-LICK_IN_ISO=yes
+LICK_IN_ISO=no
 
 ## compression method to be used (SFS files)
 #SFSCOMP='-comp xz -Xbcj x86 -b 512K'
@@ -77,7 +77,7 @@ THEME_MOUSE="Breeze_Snow"
 #XERRS_FLG=yes
 
 ## include Pkg in build (y/n). If commented then asked in 3builddistro
-INCLUDE_PKG=n
+INCLUDE_PKG=y
 
 ## ucode.cpio initial ram disk with CPU bugfixes
 ## build the microcode initrd to mitigate aganst cpu bugs like spectre/meltdown
