--- a/woof-distro/x86_64/debian/bookworm64/_00build.conf
+++ b/woof-distro/x86_64/debian/bookworm64/_00build.conf
@@ -26,13 +26,13 @@ FDRV_INC="non-free-firmware-pc"
 
 ## Include kernel-kit generated FDRIVE
 ## set to yes or no or leave commented to be asked the question at build time
-#KFDRIVE=no
+KFDRIVE=yes
 
 ## build devx? yes/no - any other value = ask
 BUILD_DEVX=yes
 
 ## include devx SFS in ISO?
-DEVX_IN_ISO=no
+DEVX_IN_ISO=yes
 
 ## include docx SFS in ISO?
 DOCX_IN_ISO=yes
@@ -68,7 +68,7 @@ fi
 PETBUILD_GTK=3
 
 ## Include the windows puppy installer LICK by Luke Lorimer aka <noryb009>
-LICK_IN_ISO=yes
+LICK_IN_ISO=no
 
 ## compression method to be used (SFS files)
 #SFSCOMP='-comp xz -Xbcj x86 -b 512K'
@@ -104,7 +104,7 @@ THEME_MOUSE="DMZ-Black"
 
 ## XSPOT_FLG if set to 'yes' X runs as spot
 ## if unset or or any value other than 'yes' X runs as root.
-XSPOT_FLG=yes
+XSPOT_FLG=no
 
 ## include Pkg in build (y/n). If commented then asked in 3builddistro
 INCLUDE_PKG=y
